Helidon Inject Refactoring - described in detail in documentation and MD files - removed tools, api and runtime modules - introduced service module (for service developers) - introduces inject module (for service registry users) - replaced Jakarta with our own annotations (and added jakarta and javax codegen modules) - services no longer singleton, resolved issues with parallel builds - config driven no longer needs a separate module set - interception handled by code generation Helidon Codegen Module Helidon Annotation processing module (and abstracted code generation) Refactoring of usages of builder module to new codegen Support for String String map in builder codegen
Co-authored-by: Daniel Kec <daniel.kec@oracle.com>
Co-authored-by: Jeff Trent <jeff.trent@oracle.com>
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>